--- a/5etools.html
+++ b/5etools.html
@@ -338,9 +338,9 @@
 				<div class="fal fa-book-spells home__icn-page"></div>
 				<h4 class="text-center home__lbl-page">法术</h4>
 			</a>
-			<a class="home__btn-page btn btn-default home__narrow-visible home__btn-player" href="psionics.html">
-				<div class="fal fa-brain home__icn-page"></div>
-				<h4 class="text-center home__lbl-page">灵能</h4>
+			<a class="home__btn-page btn btn-default home__narrow-visible home__btn-player" href="statgen.html">
+				<div class="fal fa-tally home__icn-page"></div>
+				<h4 class="ve-text-center home__lbl-page">属性生成器</h4>
 			</a>
 		</div>
 
@@ -357,9 +357,9 @@
 				<div class="fal fa-book-spells home__icn-page"></div>
 				<h4 class="text-center home__lbl-page">法术</h4>
 			</a>
-			<a class="home__btn-page btn btn-default home__btn-player" href="psionics.html">
-				<div class="fal fa-brain home__icn-page"></div>
-				<h4 class="text-center home__lbl-page">灵能</h4>
+			<a class="home__btn-page btn btn-default home__btn-player" href="statgen.html">
+				<div class="fal fa-tally home__icn-page"></div>
+				<h4 class="ve-text-center home__lbl-page">属性生成器</h4>
 			</a>
 		</div>
 	</div>
